# sky-fort-acoustic

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.vertex  Dockerfile.vertex-base  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-vertex.txt  requirements.txt
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
apps/rpi-edge/: MODEL_HEAD_NOTES.md  README.md  config.yaml  pyproject.toml  requirements.txt
apps/rpi-edge/skyfort_edge/: __init__.py  __main__.py  audio.py  audio_alarm.py  config.py  detection_log.py  gpio_led.py  http_server.py  hysteresis.py  inference.py  mel_banks_128_1024_32k.npy  preprocess.py  runtime_state.py
apps/rpi-edge/tests/: conftest.py  test_audio_alarm_degrades.py  test_config_merge.py  test_detection_log.py  test_e2e_golden_audio.py  test_gpio_sigterm.py  test_http_endpoints.py  test_hysteresis.py  test_inference_latency_host.py  test_onnx_conversion_sanity.py  test_preprocess_drift.py  test_preprocess_parity.py  test_resample_48_to_32.py
docs/: beamforming resarch  compass_artifact_wf-6c2ec688-1122-4ac5-898e-12ac7039d309_text_markdown.md  targets-api.md
models/: MODEL_PROVENANCE.md  efficientat_mn10_v6_onnx.sha256  efficientat_mn10_v8.sha256  uav_melspec_cnn.onnx
notebooks/: train_efficientat_colab.ipynb
scripts/: acquire_noise_corpora.py  convert_efficientat_to_onnx.py  download_pretrained.py  export_uma16_parquet.py  fetch_fsd50k_hf.py  generate_reference_fixtures.py  ingest_uav_uma16_dataset.py  (+8 more)
(+497 files in other folders)
