[project]
name = "sky-fort-acoustic"
version = "0.1.0"
description = "Real-time acoustic drone detection and tracking microservice"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
